--- a/01Position_Price_algorithm.ipynb
+++ b/01Position_Price_algorithm.ipynb
@@ -81,7 +81,7 @@
    "source": [
     "train = train_data\n",
     "train_exercise = train[:100000]\n",
-    "train_exercise"
+    "train_exercise.head()"
    ]
   },
   {
